# kaggle_downloader_package

./: .gitignore  CHANGELOG  LICENSE  README.md  pyproject.toml
examples/: example_usage.ipynb  example_usage_install_package.ipynb
kaggle_downloader_package/: __init__.py  kaggle_downloader.py
tests/: test_kaggle_downloader.py
